--- a/plugins/AIS/AISSearch/src/Views/AisView.css
+++ b/plugins/AIS/AISSearch/src/Views/AisView.css
@@ -36,7 +36,10 @@
     height: 22px;
     width: 22px;
     text-align: center;
-    margin-bottom:10px;
+    margin-top:2px;
+  }
+  .ais_view div.refresh .reload{
+    display:block;
   }
   .ais_view div.refresh div{
     display:none;
@@ -85,7 +88,7 @@
     /*padding-left: 6px;*/
   }
   .ais_view .instruments{
-    width: 387px;
+    width: 360px;
     background-color: #e1e8ed;
   }
   
