--- a/plugins/AIS/AISSearch/test/AISSearch2.css
+++ b/plugins/AIS/AISSearch/test/AISSearch2.css
@@ -687,6 +687,18 @@ padding-right: 5px;
     color :white;
     border-radius: 16px;
 }
+.ais_view.search_view .instruments .legend span{
+    padding: 1px 15px 2px 15px;
+}
+.ais_view.search_view .instruments .legend .type,.speed{
+    cursor: pointer;
+}
+.ais_view.search_view .instruments .legend .on{
+    background-color:#48aff1;
+    color :white;
+    border-radius: 16px;
+}
+
 .ais_view.search_view .instruments .calendar input{
     padding: 8px;
     border-radius: 3px;
@@ -1096,6 +1108,49 @@ padding-right: 5px;
 .ais_refresh:hover{
 	color: #48aff1;
 }
+.float_view .special {
+    /*width: 500px;
+    height: 280px;    
+    width: 300px;
+    height: 170px;*/
+    width: 400px;
+    height: 225px;
+    cursor: move;
+    border: none;
+    opacity: 0.7;
+    background: url(//maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/no-image.svg) no-repeat center center #555;
+}
+
+.float_view .logos{
+    position:absolute; 
+    left:0; 
+    top:0;
+    background-color: white;
+}
+
+.float_view .logos td{
+    text-align: center;
+    padding: 2px;
+}
+
+.float_view .logos img{
+    height:30px;
+}
+
+.float_view .logos.zoomed_in img{
+    height:40px;
+    cursor: zoom-out;
+}
+
+.float_view .zoomed_in {
+    cursor: zoom-out;
+}
+
+.float_view img {
+    position:absolute;
+    cursor: move;
+}
+
 
 .vessel-info-page *{
     font-family: 'Roboto', sans-serif;  
