--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -31,6 +31,10 @@
   text-align: center;
 }
 
+.hardnav-view .instruments td.active{
+  color:#f57c00;
+}
+
 .hardnav-view .hint{
    padding: 10px;
 } 
