--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -22,18 +22,23 @@
   padding: 9px 2px;
   border-radius: 3px;
   border: 1px solid #ddd;
+  background-color: #fff;
 }
 .hardnav-view .calendar .select select{
   width: 36px;
   border: none;
 }
 
- .hardnav-view .calendar .gmx-input-text {
+.hardnav-view .calendar .gmx-input-text {
   font-family: roboto;
   font-weight: 700;
   padding: 12px 2px;
   border-radius: 3px;
   border: 1px solid #ddd;
+}
+
+.hardnav-view .calendar .CalendarWidget-inputCell{
+  background-color: #e1e8ed;
 }
 
 .hardnav-view .color-transparent{
@@ -48,23 +53,29 @@
 }
 
 .hardnav-view .header {
-  padding-top: 15px; 
+  padding-top: 0px; 
+  background-color: #e1e8ed;
 }
  .hardnav-view .instruments {
    width: 100%;
+   margin-bottom: 10px;
 }
 .hardnav-view .instruments td{
   padding: 20px;
   width: 50%;
   text-align: center;
+  font-weight: 700;
 }
-
+.hardnav-view .instruments td:hover{
+  color: #48aff1;
+}
 .hardnav-view .instruments td.active{
   color:#f57c00;
 }
 
 .hardnav-view .hint{
-   padding: 10px;
+  padding: 15px;
+  padding-right: 10px;
 } 
  .hardnav-view .refresh{
    width: 30px;
@@ -72,11 +83,13 @@
 
 .hardnav-view .grid-header{
   width: 100%;
-  margin-top: 15px;
+  margin-top: 20px;
   color: #394b59;
+  border-top: solid 1px #bbb;
 }
 .hardnav-view .grid-header td{
   padding: 15px 5px;
+  font-weight: 700;
 }
 .hardnav-view .grid-header td svg{
   width:14px;
@@ -94,6 +107,14 @@
 }
 .hardnav-view .grid td{
   padding: 15px 5px;
+  border-bottom: solid 1px #ddd;
+  cursor: pointer;
+}
+.hardnav-view .grid td:nth-of-type(2),
+.hardnav-view .grid td:nth-of-type(3),
+.hardnav-view .grid td:nth-of-type(4)
+{
+  cursor: default;
 }
 .hardnav-view .grid td svg{
   width:14px;
