--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -14,9 +14,9 @@
     */
     -ms-user-select: none;
     user-select: none;
- }
+}
 
- .hardnav-view .calendar .select {
+.hardnav-view .calendar .select {
   font-family: roboto;
   font-weight: 700;
   padding: 9px 2px;
@@ -58,10 +58,11 @@
 }
  .hardnav-view .instruments {
    width: 100%;
-   margin-bottom: 10px;
+   margin-bottom: 0px;
 }
 .hardnav-view .instruments td{
   padding: 20px;
+  padding-top: 10px;
   width: 50%;
   text-align: center;
   font-weight: 700;
@@ -83,12 +84,12 @@
 
 .hardnav-view .grid-header{
   width: 100%;
-  margin-top: 20px;
+  margin-top: 0px;
   color: #394b59;
   border-top: solid 1px #bbb;
 }
 .hardnav-view .grid-header td{
-  padding: 15px 5px;
+  padding: 12px 5px;
   font-weight: 700;
 }
 .hardnav-view .grid-header td svg{
@@ -106,7 +107,7 @@
   color: #394b59;
 }
 .hardnav-view .grid td{
-  padding: 15px 5px;
+  padding: 10px 5px;
   border-bottom: solid 1px #ddd;
   cursor: pointer;
 }
@@ -134,7 +135,7 @@
 }
 .hardnav-view .footer .pager td{
  text-align: center;
- padding: 15px 5px;
+ padding: 5px 5px;
 } 
 .hardnav-view .footer .pager .arrow{
   width: 33%;
