--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -106,10 +106,20 @@
   width: 100%;
   color: #394b59;
 }
+.hardnav-view .grid tr.nonactual{
+  color: #aaa;
+}
+.hardnav-view .grid tr.nonactual .color-green,
+.hardnav-view .grid tr.nonactual .color-red{
+  opacity: 0.3;
+}
 .hardnav-view .grid td{
   padding: 10px 5px;
   border-bottom: solid 1px #ddd;
   cursor: pointer;
+}
+.hardnav-view .grid td:nth-of-type(4){
+  font-weight: 700;
 }
 .hardnav-view .grid td:nth-of-type(2),
 .hardnav-view .grid td:nth-of-type(3),
