--- a/plugins/AIS/HardNavigation/HardNavigationPlugin.css
+++ b/plugins/AIS/HardNavigation/HardNavigationPlugin.css
@@ -21,6 +21,12 @@
     user-select: none;
 }
 
+.hardnav-view .calendar {
+  padding-bottom: 20px;
+}
+.hardnav-view .calendar table{  
+  margin-left: 10px;
+}
 .hardnav-view .calendar .select {
   font-family: roboto;
   font-weight: 700;
@@ -111,10 +117,16 @@
   width: 100%;
   color: #394b59;
 }
+.hardnav-view .grid tr.nonactual{
+  opacity: 0.7;
+}
 .hardnav-view .grid td{
   padding: 10px 5px;
   border-bottom: solid 1px #ddd;
   cursor: pointer;
+}
+.hardnav-view .grid td:nth-of-type(4){
+  font-weight: 700;
 }
 .hardnav-view .grid td:nth-of-type(2),
 .hardnav-view .grid td:nth-of-type(3),
