--- a/plugins/AIS/HardNavigation/HardNavigationPlugin.css
+++ b/plugins/AIS/HardNavigation/HardNavigationPlugin.css
@@ -1,8 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);.HardNavigation.hardnav-sidebar-icon svg
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
+.HardNavigation.hardnav-sidebar-icon svg
 {
     width:16px;
     height:16px;
 }
+
 .hardnav-view * {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -62,7 +64,9 @@
 .hardnav-view .color-green{
   color: green;
 }
-
+.hardnav-view .color-yellow{
+  color: #e0d901;
+}
 .hardnav-view .header {
   padding-top: 0px; 
   background-color: #e1e8ed;
@@ -110,7 +114,7 @@
 .hardnav-view .grid-header td:nth-of-type(2),
 .hardnav-view .grid-header td:nth-of-type(3),
 .hardnav-view .grid-header td:nth-of-type(4){
-  width: 70px;
+  width: 80px;
 }
 
 .hardnav-view .grid{
@@ -141,7 +145,7 @@
 .hardnav-view .grid td:nth-of-type(2),
 .hardnav-view .grid td:nth-of-type(3),
 .hardnav-view .grid td:nth-of-type(4){
-  width: 70px;
+  width: 80px;
 }
 
 .hardnav-view .footer{
@@ -191,4 +195,6 @@
   padding: 10px;
   font-weight: 700;
 }
+
+
 /*# sourceMappingURL=HardNavigationPlugin.css.map*/
