--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -57,7 +57,9 @@
 .hardnav-view .color-green{
   color: green;
 }
-
+.hardnav-view .color-yellow{
+  color: #e0d901;
+}
 .hardnav-view .header {
   padding-top: 0px; 
   background-color: #e1e8ed;
@@ -105,7 +107,7 @@
 .hardnav-view .grid-header td:nth-of-type(2),
 .hardnav-view .grid-header td:nth-of-type(3),
 .hardnav-view .grid-header td:nth-of-type(4){
-  width: 70px;
+  width: 80px;
 }
 
 .hardnav-view .grid{
@@ -136,7 +138,7 @@
 .hardnav-view .grid td:nth-of-type(2),
 .hardnav-view .grid td:nth-of-type(3),
 .hardnav-view .grid td:nth-of-type(4){
-  width: 70px;
+  width: 80px;
 }
 
 .hardnav-view .footer{
