--- a/plugins/AIS/HardNavigation/src/Views/View.css
+++ b/plugins/AIS/HardNavigation/src/Views/View.css
@@ -50,7 +50,9 @@
 .hardnav-view .color-transparent{
   color: transparent;
 }
-
+.hardnav-view .color-blue{
+  color:blue;
+}
 .hardnav-view .color-red{
   color:red;
 }
