--- a/plugins/AIS/TrackExport/src/Views/TracksView.css
+++ b/plugins/AIS/TrackExport/src/Views/TracksView.css
@@ -203,3 +203,152 @@ cursor: pointer;
 .trackexport-view .reload:hover{
 color: #48aff1; 
 }
+
+.trackexport-view .track-table{
+  width:100%;
+  background-color: #f5f8fa;
+  border-bottom: solid 1px #e1e8ed;
+  color:#182026;
+  font-weight: 700;
+  height:31px;
+}
+.trackexport-view .track-table td{
+  padding:6px;
+}
+.trackexport-view .track-table td .date{
+  font-weight:500;
+}
+.trackexport-view .track-table td div.track{
+  vertical-align: middle;
+}
+.trackexport-view .track-table td div.track input[type="checkbox"]{
+  margin-top:-4px;
+  vertical-align: middle;
+}  
+.trackexport-view .track-table td .count{
+  font-weight:700;
+  width: 30px;
+}
+.trackexport-view .track-table td:nth-of-type(1){
+  width:1%;
+  padding-right:0;
+}
+.trackexport-view .track-table td:nth-of-type(3){
+  width:1%;
+}
+.trackexport-view .track-table td:nth-of-type(4){
+  text-align: right;
+  opacity: 0.8;
+  padding-right:12px;
+  color:#394b59;
+  width:1%;
+}
+
+.trackexport-view .open_positions{
+  cursor: pointer;
+  font-size:14px;
+}
+
+.trackexport-view .positions-table{
+  width:100%;
+  border-collapse: initial;
+  border-spacing: 0;
+}
+
+.trackexport-view .positions-table td{
+  padding:10px 5px 10px 0px;
+  cursor:pointer;
+  border-top: solid 1px white;
+}
+.trackexport-view .positions-table tr td:nth-of-type(1){
+  border-left: solid 1px white;
+  padding-left:8px;
+  color:#182026;
+  /*padding-left:28px;*/
+  width:55px; 
+  /*border-left: solid 1px white;*/
+}
+.trackexport-view .positions-table tr td:nth-of-type(6){
+  border-right:solid 1px #fff;
+}
+
+.trackexport-view .positions-table td.more{
+  border-bottom: solid 1px #e1e8ed;
+  border-top: none;
+  border-left: none;
+  cursor:default;
+  padding:0;
+}
+.trackexport-view .positions-table td.more .vi_more{
+  display:none;
+}
+.trackexport-view .positions-table td.more hr{
+  border-top: solid 1px #e1e8ed;
+  border-bottom: none;
+  margin: 0 28px 10px 0px;
+  display:none;
+}
+.trackexport-view .positions-table td.more .vi_more::after {
+  content: "";
+  clear: both;
+  /*display: table;*/
+}
+.trackexport-view .positions-table td.more .vi_more div {
+  float:left;
+}
+.trackexport-view .positions-table td.more .vi_more .c1 {
+  width:100px;
+  padding: 9px;
+}
+.trackexport-view .positions-table td.more .vi_more .c2 {
+  /*width:200px;*/
+  width:165px;
+  padding: 9px 0 9px 0;
+}
+
+.trackexport-view .positions-table td.active{
+  border-top:solid 1px #48aff1;
+  background-color: #f5f8fa;
+}
+.trackexport-view .positions-table td.more.active{
+  border:solid 1px #48aff1;
+  border-top:none;
+  background-color: #f5f8fa;
+  padding:0 0 10px 28px;
+}
+.trackexport-view .positions-table td.more.active .vi_more, 
+.trackexport-view .positions-table td.more.active hr{
+  display:block;
+}
+.trackexport-view .positions-table tr td:nth-of-type(1).active{    
+  border-left:solid 1px #48aff1;
+}
+.trackexport-view .positions-table tr td:nth-of-type(6).active{    
+  border-right:solid 1px #48aff1;
+}
+
+
+.trackexport-view .positions-table td:nth-of-type(2){
+  width:70px;
+}
+.trackexport-view .positions-table td:nth-of-type(2) span{
+  opacity: 0.6;
+}
+.trackexport-view .positions-table .local_time{
+  display:none;
+}
+.trackexport-view .positions-table .local_date{
+  display:none;
+}
+.trackexport-view .positions-table tr .show_pos{
+  visibility: hidden;
+}
+.trackexport-view .positions-table tr:hover .show_pos{
+  visibility: visible;
+}
+.trackexport-view .positions-table tr .show_info{
+  visibility: hidden;
+}
+.trackexport-view .positions-table tr:hover .show_info{
+  visibility: visible;
+}
