--- a/plugins/AIS/TrackExport/src/Views/TracksView.css
+++ b/plugins/AIS/TrackExport/src/Views/TracksView.css
@@ -92,61 +92,8 @@
    width: 30px;
 }
 
-.trackexport-view .grid-header{
-  width: 100%;
-  margin-top: 0px;
-  color: #394b59;
-  border-top: solid 1px #bbb;
-}
-.trackexport-view .grid-header td{
-  padding: 12px 5px;
-  font-weight: 700;
-}
-.trackexport-view .grid-header td.visibility-all{
-  cursor: pointer;
-}
-.trackexport-view .grid-header td svg{
-  width:14px;
-  height:14px;
-}
-.trackexport-view .grid-header td:nth-of-type(2),
-.trackexport-view .grid-header td:nth-of-type(3),
-.trackexport-view .grid-header td:nth-of-type(4){
-  width: 80px;
-}
-
-.trackexport-view .grid{
-  width: 100%;
-  color: #394b59;
-}
-.trackexport-view .grid tr.nonactual{
-  opacity: 0.7;
-}
-.trackexport-view .grid td{
-  padding: 10px 5px;
-  border-bottom: solid 1px #ddd;
-  cursor: pointer;
-}
-.trackexport-view .grid td:nth-of-type(4){
-  font-weight: 700;
-}
-.trackexport-view .grid td:nth-of-type(2),
-.trackexport-view .grid td:nth-of-type(3),
-.trackexport-view .grid td:nth-of-type(4)
-{
-  cursor: default;
-}
-.trackexport-view .grid td svg{
-  width:14px;
-  height:14px;
-}
-.trackexport-view .grid td:nth-of-type(2),
-.trackexport-view .grid td:nth-of-type(3),
-.trackexport-view .grid td:nth-of-type(4){
-  width: 80px;
-}
-
 .trackexport-view .footer{
+  display: none;
   padding-bottom: 15px;
 } 
 .trackexport-view .footer .pager{
@@ -195,7 +142,7 @@
 }
 
 .trackexport-view .reload{
-margin: 6px 10px; 
+margin: 6px 0 0 30px; 
 color: #2f3c47; 
 cursor: pointer;
 }
