--- a/plugins/AIS/TrackExport/src/SearchControl.css
+++ b/plugins/AIS/TrackExport/src/SearchControl.css
@@ -100,6 +100,7 @@
   .trackexport-view .filter .remove{
     display: none;
     margin-top:2px;
+    cursor: pointer;
   }
   .trackexport-view .filter i{
     font-size:16px;
