Export track to file (ais)

--- a/plugins/AIS/TrackExport/TrackExportPlugin.css
+++ b/plugins/AIS/TrackExport/TrackExportPlugin.css
@@ -307,6 +307,17 @@ color: #48aff1;
   visibility: visible;
 }
 
+.trackexport-view .track-table .export:hover{
+  background-color: #48aff1;
+      color: white;
+  }
+.trackexport-view .track-table .export{
+    border-radius: 16px;
+    padding: 2px 5px 2px 5px;
+    margin-right: 4px;
+    cursor: pointer;
+}
+
 .trackexport-view .filter .preferences{
     width:16px;
     height:19px;            
