Draw route (ais)

--- a/plugins/AIS/RouteVwr/src/all.css
+++ b/plugins/AIS/RouteVwr/src/all.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-.RouteVwr.hardnav-sidebar-icon svg
+.RouteVwr.routvwr-sidebar-icon svg
 {
     width:16px;
     height:16px;
