--- a/plugins/AIS/RouteVwr/RouteVwrPlugin.css
+++ b/plugins/AIS/RouteVwr/RouteVwrPlugin.css
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
-.RouteVwr.hardnav-sidebar-icon svg
+.RouteVwr.routvwr-sidebar-icon svg
 {
-    width:16px;
-    height:16px;
+    width:18px;
+    height:18px;
 }
 
 .routevwr-view * {
@@ -163,16 +163,33 @@ color: #48aff1;
   color:#182026;
   font-weight: 700;
 }
-.routevwr-view  .route-table tr:hover{
+
+.routevwr-view  .route-table tr:not(:nth-of-type(1)):hover{
 color: #48aff1; 
+}
+
+.routevwr-view .route-table th{
+  padding: 10px 5px 10px 5px;
+  background-color: #f5f8fa;
+  border-bottom: solid 1px #e1e8ed;
 }
 .routevwr-view .route-table td{
   padding: 10px 5px 10px 5px;
   cursor: pointer;
   border-bottom: solid 1px #e1e8ed;
+  text-align: center;
+}
+.routevwr-view  .route-table tr.active td{
+  background-color: #eee
 }
 .routevwr-view .route-table .date{
   font-weight:500;
+}
+
+.routevwr-sqw-icon{
+  width:9px; 
+  height:9px; 
+  border: solid 1px red;
 }
 
 .routevwr-view.select-list{
