--- a/plugins/ImageCount/ImageCountPlugin.css
+++ b/plugins/ImageCount/ImageCountPlugin.css
@@ -15,19 +15,25 @@
   background-color: #e1e8ed;
   border: solid 1px blue
 }
+.imagecount-view .select-label{
+  font-weight: 600;
+}
+.imagecount-view .select-label.label1{
+  margin: 15px 0 10px 25px;
+}
+.imagecount-view .select-label.label2{
+  margin: 0 0 15px 25px;
+}
 .imagecount-view .system{
-  padding: 10px 20px;
+  padding: 0 0 10px 20px;
 }
 .imagecount-view .system input{
   margin:5px;
 }
 .imagecount-view .header .but{
-  padding: 20px;
-    padding-top: 10px;
-    width: 50%;
-    text-align: center;
-    font-weight: 700;
-    cursor: pointer
+  padding: 0px 30px 20px 25px;
+  font-weight: 700;
+  cursor: pointer
 }
 .imagecount-view .header .but.active, .imagecount-view .header .but.active:hover{
   color: #f57c00;
@@ -40,11 +46,28 @@
   width: 14px;
     height: 18px;
     top: 2px;
-    left: -6px;
+    left: 6px;
     position: relative;
 }
-
-
+.imagecount-view .results .form div:first-of-type{
+  margin-top:20px;
+}
+.imagecount-view .results .form div{
+  margin: 5px 20px;
+}
+.imagecount-view .results b{
+  font-weight:600;
+}
+.imagecount-view .CalendarWidget-inputCell{
+  background-color: #e1e8ed;
+}
+.imagecount-view .CalendarWidget-inputCell input{
+  font-family: roboto;
+  font-weight: 700;
+  padding: 12px 2px;
+  border-radius: 3px;
+  border: 1px solid #ddd;
+}
 /*
 
 .imagecount-view .unselectable {
